# back/src/routes/auth.routes.js
@@ -5,6 +5,7 @@ import asyncHandler from "../middlewares/async-handler.middleware.js";
 
 const router = Router();
 
+router.get('/me', asyncHandler(authController.verificarAutenticacao));
 router.post("/login", asyncHandler(authController.login));
 router.post("/logout", asyncHandler(authController.logout));
 
